Travail/Seminaire/gitops-template-atelier-kube/apps/app-simple/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-simple
spec:
  type: ClusterIP
  selector:
    app: app-simple
  ports:
  - name: http
    port: 8080
    targetPort: http
